# edgestack

./: README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/browser-runtime/: page.tsx  worker.ts
app/costs/: page.tsx
app/governance/: page.tsx
app/login/: page.tsx
app/logs/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
app/vault/: page.tsx
app/workflows/: page.tsx
components/dashboard/: ActivityFeed.tsx  AlertBanner.tsx
components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
components/setup/: DownloadBenchmarkStep.tsx  HardwareScanStep.tsx  SetupSummaryStep.tsx  (+3 more)
lib/: tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cost.rs  failure.rs  governance.rs  inference.rs  mod.rs  settings.rs  setup.rs  telemetry.rs  vault.rs  workflow.rs
src-tauri/src/db/: audit_chain.rs  mod.rs  writer.rs
src-tauri/src/db/repositories/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: bedrock_interceptor.rs  capability_resolver.rs  circuit_breaker.rs  config_service.rs  cost_analytics.rs  dag_validator.rs  floci_manager.rs  governance.rs  hardware_scanner.rs  inference_client.rs  mod.rs  model_manager.rs  notification_service.rs  ollama_manager.rs  policy_signature.rs  residency_manager.rs  retrieval_planner.rs  sandboxed_runner.rs  scheduler.rs  telemetry_collector.rs  trust_registry.rs  vault_service.rs  workflow_engine.rs
src-tauri/src/utils/: fs.rs  id.rs
(+12 files in other folders)
