[package]
name = "edgestack"
version = "1.0.0"
description = "Your private AI business automation hub"
authors = ["EdgeStack"]
edition = "2021"

[lib]
name = "edgestack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "edgestack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"
keyring = "2"
futures = "0.3"
bytes = "1"
cron = "0.12"
once_cell = "1"
dirs-next = "2"
